--- a/python-czatbot/data/stories.yml
+++ b/python-czatbot/data/stories.yml
@@ -2,6 +2,11 @@ version: "3.1"
 
 stories:
 
+- story: Provide opening hours on a specific day
+  steps:
+    - intent: ask_opening_hours_on_day
+    - action: action_provide_opening_hours_on_day
+
 - story: show me opening hours
   steps:
   - intent: greet
